bad/new_array_invalid_size_type_void.example_compiler_output
ERROR
[1mbad/new_array_invalid_size_type_void.lat:4:20: [1;31merror: [0;1marray size has to be of type `int`, not `void`[m
	int[] x = new int[foo()];
	                  [1;32m^[m
